unpackaged/main/default/objects/order__c/order__c.object-meta.xml
<CustomObject>
    <label>CO: Order</label>
    <nameField>
        <label>CO: Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CO: Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>