unpackaged/main/default/objects/order__c/fields/auto_confirmed__c.field-meta.xml
<CustomField>
    <fullName>auto_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TS Auto Confirmed</label>
    <type>Checkbox</type>
</CustomField>