unpackaged/main/default/objects/order__c/fields/certificate_type__c.field-meta.xml
<CustomField>
    <fullName>certificate_type__c</fullName>
    <label>TS Application Certificatetype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>