unpackaged/main/default/objects/order__c/fields/closed_at__c.field-meta.xml
<CustomField>
    <fullName>closed_at__c</fullName>
    <label>Closed At</label>
    <type>DateTime</type>
</CustomField>