unpackaged/main/default/objects/order__c/fields/company_Id__c.field-meta.xml
<CustomField>
    <fullName>company_Id__c</fullName>
    <label>Company Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CO: Orders</relationshipLabel>
    <relationshipName>CO_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>