unpackaged/main/default/objects/order__c/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <label>TS Application Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>