unpackaged/main/default/objects/order__c/fields/company_vat_number__c.field-meta.xml
<CustomField>
    <fullName>company_vat_number__c</fullName>
    <label>TS Application Company Vat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>