unpackaged/main/default/objects/order__c/fields/confirmed_at__c.field-meta.xml
<CustomField>
    <fullName>confirmed_at__c</fullName>
    <label>Confirmed At</label>
    <type>DateTime</type>
</CustomField>