unpackaged/main/default/objects/order__c/fields/confirmed_by_user_id__c.field-meta.xml
<CustomField>
    <fullName>confirmed_by_user_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed By User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CO_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>