unpackaged/main/default/objects/order__c/fields/country_id__c.field-meta.xml
<CustomField>
    <fullName>country_id__c</fullName>
    <label>TS Application Country Id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>