unpackaged/main/default/objects/order__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>TS Created at</label>
    <type>DateTime</type>
</CustomField>