unpackaged/main/default/objects/order__c/fields/creation_date__c.field-meta.xml
<CustomField>
    <fullName>creation_date__c</fullName>
    <label>TS Application Creation Date</label>
    <type>DateTime</type>
</CustomField>