unpackaged/main/default/objects/order__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>TS Application Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>