unpackaged/main/default/objects/order__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>TS Application Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>