unpackaged/main/default/objects/order__c/fields/fax__c.field-meta.xml
<CustomField>
    <fullName>fax__c</fullName>
    <label>TS Application Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>