unpackaged/main/default/objects/order__c/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <label>TS Application Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>