unpackaged/main/default/objects/order__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>TS Application Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>da</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>pl</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>sv</fullName>
                <label>Swedish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>