unpackaged/main/default/objects/order__c/fields/lastname__c.field-meta.xml
<CustomField>
    <fullName>lastname__c</fullName>
    <label>TS Application Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>