unpackaged/main/default/objects/order__c/fields/legal_form__c.field-meta.xml
<CustomField>
    <fullName>legal_form__c</fullName>
    <label>TS Application Legalform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>