unpackaged/main/default/objects/order__c/fields/membership__c.field-meta.xml
<CustomField>
    <fullName>membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>membership__c</referenceTo>
    <relationshipLabel>CO: Orders</relationshipLabel>
    <relationshipName>CO_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>