unpackaged/main/default/objects/order__c/fields/membership_responsible__c.field-meta.xml
<CustomField>
    <fullName>membership_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CO_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>