unpackaged/main/default/objects/order__c/fields/Membership_SetupFee__c.field-meta.xml
<CustomField>
    <fullName>Membership_SetupFee__c</fullName>
    <formula>membership__r.setup_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership_SetupFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>