unpackaged/main/default/objects/order__c/fields/membership_type__c.field-meta.xml
<CustomField>
    <fullName>membership_type__c</fullName>
    <label>TS Application Membershiptype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>