unpackaged/main/default/objects/order__c/fields/order_price__c.field-meta.xml
<CustomField>
    <fullName>order_price__c</fullName>
    <label>TS Application Order Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>