unpackaged/main/default/objects/order__c/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <label>TS Application Paymenttype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CLICKANDBUY</fullName>
                <label>\ Click&amp;Buy (Firstgate)</label>
            </value>
            <value>
                <fullName>AMAZON_PAYMENTS</fullName>
            </value>
            <value>
                <fullName>CASH_ON_DELIVERY</fullName>
                <label>Cash on delivery</label>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>CREDIT_CARD</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>INKASSO</fullName>
                <label>Debt collection</label>
            </value>
            <value>
                <fullName>DIRECT_DEBIT</fullName>
                <label>Direct Debit</label>
            </value>
            <value>
                <fullName>DIRECT_E_BANKING</fullName>
                <label>DIRECTebanking.com</label>
            </value>
            <value>
                <fullName>DOTPAY</fullName>
                <label>Dotpay [PL]</label>
            </value>
            <value>
                <fullName>FINANCING</fullName>
                <label>Financing</label>
            </value>
            <value>
                <fullName>GIROPAY</fullName>
                <label>Giropay</label>
            </value>
            <value>
                <fullName>GOOGLE_CHECKOUT</fullName>
                <label>Google Checkout</label>
            </value>
            <value>
                <fullName>IMRG_SETTLEMENT</fullName>
                <label>IMRG Settlement</label>
            </value>
            <value>
                <fullName>INSOLVENZ</fullName>
                <label>insolvenz</label>
            </value>
            <value>
                <fullName>INVOICE</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>LEASING</fullName>
                <label>Leasing</label>
            </value>
            <value>
                <fullName>SHOP_CARD</fullName>
                <label>Online Shop Payment Card</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>other</label>
            </value>
            <value>
                <fullName>PAYBOX</fullName>
                <label>Paybox</label>
            </value>
            <value>
                <fullName>CASH_ON_PICKUP</fullName>
                <label>Payment on pickup</label>
            </value>
            <value>
                <fullName>PAYPAL</fullName>
                <label>PayPal</label>
            </value>
            <value>
                <fullName>PREPAYMENT</fullName>
                <label>Prepayment / Transfer</label>
            </value>
            <value>
                <fullName>PRZELEWY24</fullName>
                <label>Przelewy24 [PL]</label>
            </value>
            <value>
                <fullName>PLATNOSCI</fullName>
                <label>Płatności [PL]</label>
            </value>
            <value>
                <fullName>MONEYBOOKERS</fullName>
                <label>Skrill</label>
            </value>
            <value>
                <fullName>T_PAY</fullName>
                <label>T-Pay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>