unpackaged/main/default/objects/order__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>TS Application Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>