unpackaged/main/default/objects/order__c/fields/product_offer__c.field-meta.xml
<CustomField>
    <fullName>product_offer__c</fullName>
    <label>TS Application Productoffer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>