unpackaged/main/default/objects/order__c/fields/product_price__c.field-meta.xml
<CustomField>
    <fullName>product_price__c</fullName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>