unpackaged/main/default/objects/order__c/fields/responsible__c.field-meta.xml
<CustomField>
    <fullName>responsible__c</fullName>
    <label>TS Application Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>