unpackaged/main/default/objects/order__c/fields/sales_responsible__c.field-meta.xml
<CustomField>
    <fullName>sales_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CO_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>