unpackaged/main/default/objects/order__c/fields/shop__c.field-meta.xml
<CustomField>
    <fullName>shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>shop__c</referenceTo>
    <relationshipLabel>CO: Orders</relationshipLabel>
    <relationshipName>CO_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>