unpackaged/main/default/objects/order__c/fields/shop_language__c.field-meta.xml
<CustomField>
    <fullName>shop_language__c</fullName>
    <label>TS Application Shop Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>