unpackaged/main/default/objects/order__c/fields/shop_name__c.field-meta.xml
<CustomField>
    <fullName>shop_name__c</fullName>
    <label>TS Application Shop Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>