unpackaged/main/default/objects/order__c/fields/shopUrl__c.field-meta.xml
<CustomField>
    <fullName>shopUrl__c</fullName>
    <label>TS Application Shopurl</label>
    <type>Url</type>
</CustomField>