unpackaged/main/default/objects/order__c/fields/source_opportunity__c.field-meta.xml
<CustomField>
    <fullName>source_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CO: Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>