unpackaged/main/default/objects/order__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>TS Application State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>CHECK</fullName>
                <label>check pending</label>
            </value>
            <value>
                <fullName>CONFIRMED</fullName>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>DUPLICATE</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>REQUESTED</fullName>
                <label>Not yet confirmed (DOI)</label>
            </value>
            <value>
                <fullName>NEW</fullName>
                <label>Not yet confirmed (payment)</label>
            </value>
            <value>
                <fullName>REJECTED</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>REVIEW</fullName>
                <label>Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>