unpackaged/main/default/objects/order__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <label>TS Application Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>