unpackaged/main/default/objects/order__c/fields/target_market__c.field-meta.xml
<CustomField>
    <fullName>target_market__c</fullName>
    <label>TS Application Targetmarket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>