unpackaged/main/default/objects/order__c/fields/title_id__c.field-meta.xml
<CustomField>
    <fullName>title_id__c</fullName>
    <label>TS Application Title Id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>