unpackaged/main/default/objects/order__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <label>TS Application Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>