unpackaged/main/default/objects/order__c/fields/TS_Application_Fee_Reporting__c.field-meta.xml
<CustomField>
    <fullName>TS_Application_Fee_Reporting__c</fullName>
    <formula>IF(ISPICKVAL(type__c, &quot;MEMBERSHIP&quot;),  setup_fee__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TS Application Fee Reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>