unpackaged/main/default/objects/order__c/fields/tsId__c.field-meta.xml
<CustomField>
    <fullName>tsId__c</fullName>
    <label>TS Application tsid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>