unpackaged/main/default/objects/order__c/fields/tsOrderId__c.field-meta.xml
<CustomField>
    <fullName>tsOrderId__c</fullName>
    <externalId>true</externalId>
    <label>tsOrderId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>