unpackaged/main/default/objects/order__c/fields/turnover__c.field-meta.xml
<CustomField>
    <fullName>turnover__c</fullName>
    <label>TS Application Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>