unpackaged/main/default/objects/order__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>TS Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADD_DOMAIN</fullName>
            </value>
            <value>
                <fullName>ADD_PRODUCTS</fullName>
            </value>
            <value>
                <fullName>MEMBERSHIP_UPGRADE</fullName>
            </value>
            <value>
                <fullName>MEMBERSHIP</fullName>
                <label>Membership,In Membership</label>
            </value>
            <value>
                <fullName>RATING</fullName>
                <label>Rating</label>
            </value>
            <value>
                <fullName>RESEARCH</fullName>
            </value>
            <value>
                <fullName>UPDATE_CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>