unpackaged/main/default/objects/order__c/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>TS Updated at</label>
    <type>DateTime</type>
</CustomField>