unpackaged/main/default/objects/order__c/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <label>TS Application Uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>