unpackaged/main/default/objects/order__c/fields/voucher__c.field-meta.xml
<CustomField>
    <fullName>voucher__c</fullName>
    <label>TS Application Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>