unpackaged/main/default/objects/order__c/fields/zip__c.field-meta.xml
<CustomField>
    <fullName>zip__c</fullName>
    <label>TS Application Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>