unpackaged/main/default/objects/order__c/validationRules/Prevent_changing_Order_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_Order_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; $User.ignore_validation_rules__c = FALSE</errorConditionFormula>
    <errorMessage>You cannot change the name of an order.</errorMessage>
</ValidationRule>